
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int errno ;
 int exit (int) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 char* strerror (int ) ;

int read_data(int sock, char* buf, int len)
{
 int l;
 int to_read = len;

 do {
  if ((l = read(sock, buf, to_read)) < 0) {
   printf("Error in read: %s\n", strerror(errno));
   exit(1);
  }
  to_read -= len;
 } while (to_read > 0);

 return len;
}
